LRDOCS-13888 Finish explaining JVM options