@@ -206,7 +206,7 @@ Make the following edits to your `standalone.conf` script.
 1. Add these Java options setting at the end of the file:
 
    ```bash
-   JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8 -Djava.locale.providers=JRE,COMPAT,CLDR -Duser.timezone=GMT -Xms2560m -Xmx2560m -XX:MaxNewSize=1536m -XX:MaxMetaspaceSize=768m -XX:MetaspaceSize=768m -XX:NewSize=1536m -XX:SurvivorRatio=7 -Djboss.as.management.blocking.timeout=1800"
+   JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8 -Duser.timezone=GMT -Xms2560m -Xmx2560m -XX:MaxNewSize=1536m -XX:MaxMetaspaceSize=768m -XX:MetaspaceSize=768m -XX:NewSize=1536m -XX:SurvivorRatio=7 -Djboss.as.management.blocking.timeout=1800"
 
    JDK_JAVA_OPTIONS="$JDK_JAVA_OPTIONS --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
 
@@ -220,9 +220,8 @@ The Java options and memory arguments are explained below.
 | Option                                        | Explanation                                                       |
 | :-------------------------------------------- | :---------------------------------------------------------------- |
 | `-Dfile.encoding=UTF-8`                       | DXP requires UTF-8 file encoding.                                 |
-| `-Djava.locale.providers=JRE,COMPAT,CLDR`     | TODO |
 | `-Djava.net.preferIPv4Stack=true`             | Prefers an IPv4 stack over IPv6.                                  |
-| `-Djboss.as.management.blocking.timeout=1800` | TODO |
+| `-Djboss.as.management.blocking.timeout=1800` | Set timeout to retry in case JBoss fails to start.                |
 | `-Duser.timezone=GMT`                         | DXP requires the application server JVM to use the GMT time zone. |
 
 !!! note
@@ -277,7 +276,7 @@ If you're using JBoss to manage the data source, follow these steps:
 
 1. Get the JDBC JAR from your DXP WAR (7.4+) or from the database vendor, and copy it to the `$JBOSS_HOME/modules/com/liferay/portal/main` folder.
 
-1. Update `module.xml` in the `$JBOSS_HOME/modules/com/liferay/portal/main` folder. In the file, declare the portal module and the JDBC JAR.
+1. Update `module.xml` in the `$JBOSS_HOME/modules/com/liferay/portal/main` folder to declare the portal module and the JDBC JAR.
 
    ```xml
    <resources>
